Test case failure.